<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>dev.orne</groupId>
    <artifactId>java-root-pom</artifactId>
    <version>1.3.0</version>
    <relativePath />
  </parent>

  <artifactId>orne-beans</artifactId>
  <version>0.8.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Orne Beans (JakartaEE 8)</name>
  <description>Orne bean development utilities</description>
  <inceptionYear>2020</inceptionYear>
  <url>${github.page.url}orne-beans-javax/</url>

  <licenses>
    <license>
      <name>GNU Lesser General Public License (LGPL) version 3.0</name>
      <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>wamphiry</id>
      <name>(w) Iker Hernaez</name>
      <url>https://github.com/ihernaez</url>
    </developer>
  </developers>

  <properties>
    <java.version>11</java.version>
    <java.module.name>dev.orne.beans</java.module.name>
    <license.licenseName>lgpl_v3</license.licenseName>

    <commons.lang.version>3.20.0</commons.lang.version>
    <commons.beanutils.version>1.11.0</commons.beanutils.version>

    <apiguardian.version>1.1.2</apiguardian.version>
    <javax.validation.version>2.0.1.Final</javax.validation.version>
    <fasterxml.jackson.version>2.15.2</fasterxml.jackson.version>
    <jaxb.api.version>2.3.1</jaxb.api.version>
    <json.api.version>2.1.0</json.api.version>
    <jsonb.api.version>3.0.0</jsonb.api.version>
    <dev.orne.generators.version>0.3.0</dev.orne.generators.version>

    <hibernate.validation.version>6.2.5.Final</hibernate.validation.version>
    <glassfish.jakarta.el.version>3.0.4</glassfish.jakarta.el.version>
    <eclipse.yasson.version>3.0.3</eclipse.yasson.version>

    <github.project.id>java-beans</github.project.id>
    <sonar.projectKey>orne-dev_java-beans</sonar.projectKey>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apiguardian</groupId>
      <artifactId>apiguardian-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jspecify</groupId>
      <artifactId>jspecify</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons.lang.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-beanutils</groupId>
      <artifactId>commons-beanutils</artifactId>
      <version>${commons.beanutils.version}</version>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>${javax.validation.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>jakarta.json</groupId>
      <artifactId>jakarta.json-api</artifactId>
      <version>${json.api.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>${jaxb.api.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>jakarta.json.bind</groupId>
      <artifactId>jakarta.json.bind-api</artifactId>
      <version>${jsonb.api.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${fasterxml.jackson.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>dev.orne.test</groupId>
      <artifactId>orne-test-generators</artifactId>
      <version>${dev.orne.generators.version}</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>${hibernate.validation.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>jakarta.el</artifactId>
      <version>${glassfish.jakarta.el.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>${jaxb.api.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse</groupId>
      <artifactId>yasson</artifactId>
      <version>${eclipse.yasson.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <groups>ut</groups>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <configuration>
            <groups>it</groups>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <scm>
    <connection>${github.scm.connection}</connection>
    <developerConnection>${github.scm.connection.dev}</developerConnection>
    <url>${github.scm.url}</url>
  </scm>
  <distributionManagement>
    <site>
      <id>github</id>
      <name>Github Project Pages</name>
      <url>${project.url}</url>
    </site>
  </distributionManagement>

</project>
